--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "angular_test"
     , "version": "1.0.0"
     , "description": "test app"
-    , "main": "index.js"
+    , "main": "main.js"
     , "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     }
